# xanadOS-Search_Destroy

./: .copilot-instructions.md  .coverage  .cspell.json  .cspellignore  .editorconfig  .flake8  .gitattributes  .gitconfig_project  .gitignore  .gitleaksignore  .gitmessage  .markdownlint.json  .markdownlintignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .prettierrc.json.old  .pylintrc  .venv-setup-summary.md  =24.1.0  AGENTS.md  BUG_FIXES_SUMMARY.md  BUILD_OPTIMIZATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_REVIEW_FINDINGS.md  COMPONENT_REVIEW_COMPLETE.md  COMPREHENSIVE_FIX_REPORT_2025-08-23.md  COMPREHENSIVE_ISSUE_AUDIT.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DASHBOARD_SYNC_FIXED.md  DROPDOWN_THEME_FIXES.md  Dockerfile  ENVIRONMENT_SETUP_COMPLETE.md  EXIT_PROTECTION_DIALOG.md  GITLEAKS_RESOLUTION.md  (+77 more)
.copilot/workspace/: BOOTSTRAP.md  DOC_INDEX.json  HEARTBEAT.md  IDENTITY.md  MEMORY.md  RESEARCH.md  SOUL.md  TOOLS.md  USER.md
.devcontainer/: devcontainer.json
.github/: .gitconfig_project  CODEOWNERS  GIT_STRATEGY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions-complete.md  copilot-instructions.md  copilot-version.md  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/agents/: coding.agent.md  doctor.agent.md  explore.agent.md  fast.agent.md  researcher.agent.md  review.agent.md  setup.agent.md  update.agent.md
.github/chatmodes/: INDEX.md  advanced-task-planner.chatmode.md  architect.chatmode.md  claude-sonnet4-architect.chatmode.md  documentation.chatmode.md  elite-engineer.chatmode.md  gemini-pro-specialist.chatmode.md  gpt5-elite-developer.chatmode.md  o1-preview-reasoning.chatmode.md  performance.chatmode.md  (+2 more)
app/: __init__.py  main.py
archive/: ARCHIVE_INDEX.md  ARCHIVE_INDEX.md.backup-1756113305  README.md  REPOSITORY_CLEANUP_SUMMARY.md  REPOSITORY_CLEANUP_SUMMARY.md.backup-1756113305  config.py.backup-20250808-160451  latest_monitoring_dir.txt
config/: .gitkeep  50-xanadOS-search-destroy.rules  cspell.json  gui_config.toml  io.github.asafelobotomy.searchanddestroy.hardened.policy  io.github.asafelobotomy.searchanddestroy.policy  io.github.asafelobotomy.searchanddestroy.rkhunter.policy  monitoring_config.toml  mypy.ini  org.xanados.searchanddestroy.hardened.policy  org.xanados.searchanddestroy.policy  org.xanados.searchanddestroy.rkhunter.policy  performance_config_2025.json  performance_config_template.json  pytest.ini  pytest_modern.ini  rkhunter-optimized.conf  rkhunter_enhanced.conf  security.conf.example  security_config.toml  update_config.json  update_config_enhanced.json
data/: .gitignore  README.md
dev/: PRIVILEGE_ESCALATION_AUDIT.py  README.md  cleanup_repository.py  comprehensive_build_reviewer.py  create_integration_patch.py  firewall_scroll_test.py  firewall_settings_demo.py  grace_period_demo.py  organize_repository_comprehensive.py  quick_scan_button_fix_summary.py  repository_status.py  setup.sh  startup_optimization_report.py  test_settings_fix.py  theme_migration_tool.py  theme_performance_test.py  validate_security.py  verify_cleanup.py
docs/: API.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_MODERNIZATION_REPORT.md  COPILOT_SETUP.md  Code_Citations.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  DOCUMENTATION_REVIEW_COMPLETE.md  LINK_VERIFICATION_REPORT.md  MODERNIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_ORGANIZATION.md  TOOLTIP_IMPROVEMENTS.md  VERSION_CONTROL.md  VERSION_CONTROL_SUMMARY.md  gui-layout-improvements.md  implementation-summary.md
examples/: dashboard_demo.py  dashboard_integration_demo.py  ml_api_client_demo.py  ml_api_server.py  ml_scanning_demo.py  performance_dashboard_demo.py  performance_optimization_demo.py  test_api_integration.py
gui_improvements/: accessibility.py  dashboard_tab.py  improved_scan_interface.py  practical_implementation.py  security_ux_improvements.md  visual_feedback.py
models/: README.md  trusted_hashes.json
modernization_plan/: COMPREHENSIVE_ANALYSIS_REPORT.md  PROGRESS.md  implement_modernization.sh  modernization_plan.json
packaging/: PACKAGING_GUIDE.md  README.md
releases/: v2.10.0.md  v2.10.0.md.backup-1756113305  v2.13.1.md
reports/: README.md  VERSION_CONTROL_IMPLEMENTATION_COMPLETE.md
scripts/: .gitignore  README.md  archive.sh  batch_archive.sh  cleanup-repository.sh  cleanup.sh  create_test_config.py  flathub-submission-assistant.sh  generate-install-links.sh  install-hooks.sh  markdown-quality-fixer.js  organize-repo.py  organize_documentation.py  organize_repository.py  prepare-build.sh  prevent-file-restoration.sh  release.sh  restore.sh  run.sh  setup-dev-environment.sh  setup.sh  stage1-implementation.sh  test-flatpak-build.sh  update-readme.js  validate-policies.sh  verify-build.sh
src/: main.py
stubs/: README.md
tests/: README.md  README_MODERN_TESTS.md  README_MODERN_TESTS.md.backup-1756113305  VALIDATION_REPORT.md  VALIDATION_REPORT.md.backup-1756113305  __init__.py  conftest.py  manual_test_safe_files.py  requirements-test.txt  run_modern_tests.py  test_adaptive_worker_scaling.py  test_advanced_coverage.py  test_advanced_io.py  test_cancellation.py  test_config_validation.py  test_exception_handling.py  test_file_watcher_modern.py  test_final_verification.py  test_gui.py  test_gui_mark_safe_integration.py  test_gui_monitoring_integration.py  test_implementation.py  test_improved_status.py  test_integration_comprehensive.py  test_intelligent_cache.py  test_interactive_fixes.py  test_io_performance_benchmark.py  test_issue_detection.py  test_monitoring.py  test_monitoring_components.py  test_performance.py  test_performance_monitoring.py  test_phase1_enhancements.py  test_phase2_integration.py  test_phase3_integration.py  test_reporting_edge_cases.py  test_rkhunter_opt.py  test_rkhunter_status.py  test_rt_protection_optimizations.py  test_safe_files_feature.py  (+3 more)
tools/: flatpak-pip-generator
(+1611 files in other folders)
